--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lerna": "^2.11.0",
     "poi": "^10.2.9",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2"
+    "stylus-loader": "^3.0.2",
+    "svg-to-symbol-loader": "^1.1.3"
   },
   "eslintConfig": {
     "root": true,
@@ -25,6 +26,7 @@
     "vue": "^2.5.16"
   },
   "dependencies": {
+    "vue-iconfont": "^2.5.1",
     "vue-messenger": "^2.3.3"
   }
 }
