--- a/package.json
+++ b/package.json
@@ -7,25 +7,8 @@
   "author": "Jay Fong <fjc0kb@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "poi",
-    "build": "poi build"
-  },
-  "devDependencies": {
-    "@lopo/eslint-config-lopo": "^0.0.6",
-    "babel-plugin-import": "^1.8.0",
-    "eslint": "^5.1.0",
-    "lerna": "^2.11.0",
-    "poi": "^10.2.9",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "svg-to-symbol-loader": "^1.1.3"
-  },
-  "eslintConfig": {
-    "root": true,
-    "extends": "@lopo/lopo"
-  },
-  "peerDependencies": {
-    "vue": "^2.5.16"
+    "serve": "vue-cli-service serve --copy --port 5962 demo/index.js",
+    "build": "vue-cli-service build --report --target lib --name lopo src/index.js"
   },
   "dependencies": {
     "@lopo/china-division-data": "^0.0.2",
@@ -34,5 +17,20 @@
     "swiper": "^4.3.5",
     "vue-iconfont": "^2.5.1",
     "vue-messenger": "^2.3.3"
+  },
+  "devDependencies": {
+    "@lopo/eslint-config-lopo": "^0.0.6",
+    "@vue/cli-plugin-babel": "^3.0.0",
+    "@vue/cli-service": "^3.0.0",
+    "babel-plugin-import": "^1.8.0",
+    "eslint": "^5.1.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "svg-to-symbol-loader": "^1.1.3",
+    "vue": "^2.5.17",
+    "vue-template-compiler": "^2.5.17"
+  },
+  "peerDependencies": {
+    "vue": "^2.5.17"
   }
 }
