--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@lopo/china-division-data": "^0.0.2",
     "date-fns": "^1.29.0",
     "lodash": "^4.17.10",
+    "photoswipe": "^4.1.2",
     "swiper": "^4.3.5",
     "vue-iconfont": "^2.5.1",
     "vue-messenger": "^2.3.3"
