--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   },
   "dependencies": {
     "@lopo/china-division-data": "^0.0.2",
+    "ant-design-icons": "^1.2.2",
     "date-fns": "^1.29.0",
+    "ionicons": "^4.3.0",
     "lodash": "^4.17.10",
     "photoswipe": "^4.1.2",
     "swiper": "^4.3.5",
