--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "date-fns": "^1.29.0",
     "lodash": "^4.17.10",
     "photoswipe": "^4.1.2",
+    "scroll-into-view-if-needed": "^2.2.16",
     "swiper": "^4.3.5",
     "vue-iconfont": "^2.5.1",
     "vue-messenger": "^2.3.3"
