--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@vue/cli-plugin-babel": "^3.0.0",
     "@vue/cli-service": "^3.0.0",
     "babel-plugin-import": "^1.8.0",
+    "commander": "^2.17.1",
     "eslint": "^5.1.0",
     "fs-extra": "^7.0.0",
     "stylus": "^0.54.5",
