--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@lopo/china-division-data": "^0.0.2",
     "ant-design-icons": "^1.3.3",
     "date-fns": "^1.29.0",
+    "id-validator": "^1.3.0",
+    "is-chinese-phone-number": "^0.1.7",
     "lodash": "^4.17.10",
     "photoswipe": "^4.1.2",
     "scroll-into-view-if-needed": "^2.2.16",
