--- a/projects/theme/package.json
+++ b/projects/theme/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "autoprefixer": "^9.1.3",
+    "commander": "^2.17.1",
     "fs-extra": "^7.0.0",
     "gulp": "^3.9.1",
     "gulp-postcss": "^8.0.0",
