--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "stylus-loader": "^3.0.2",
     "svg-to-symbol-loader": "^1.1.3",
     "vue": "^2.5.17",
+    "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.17"
   },
   "peerDependencies": {
