--- a/projects/theme/package.json
+++ b/projects/theme/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@lopo/theme",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Lopo 主题自定义工具。",
-  "main": "dist/china-division-data.cjs.js",
-  "module": "dist/china-division-data.es.js",
-  "unpkg": "dist/china-division-data.min.js",
-  "jsdelivr": "dist/china-division-data.min.js",
+  "main": "src/cli.js",
+  "bin": {
+    "lopo-theme": "./src/cli.js",
+    "lt": "./src/cli.js"
+  },
   "license": "MIT",
   "homepage": "https://github.com/fjc0k/lopo/tree/master/projects/theme",
   "publishConfig": {
@@ -27,25 +28,18 @@
     "email": "fjc0kb@gmail.com",
     "url": "https://github.com/fjc0k"
   },
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "generate": "node scripts/generate.js",
-    "build": "bili --format es,cjs,umd,umd-min --moduleName ChinaDivisionData",
-    "gb": "yarn generate & yarn build"
-  },
   "peerDependencies": {
     "lopo": "^0.0.3"
   },
   "dependencies": {
     "autoprefixer": "^9.1.3",
     "commander": "^2.17.1",
+    "consola": "^1.4.3",
     "fs-extra": "^7.0.0",
-    "gulp": "^3.9.1",
-    "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-stylus": "^2.7.0",
-    "postcss-modules": "^1.3.2"
+    "globby": "^8.0.1",
+    "lodash": "^4.17.10",
+    "postcss": "^7.0.2",
+    "postcss-modules": "^1.3.2",
+    "stylus": "^0.54.5"
   }
 }
