--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   ],
   "scripts": {
     "dev": "vue-cli-service serve --copy --port 5962 demo/index.js",
-    "build": "vue-cli-service build --report --target lib --name lopo src/index.js",
+    "build": "vue-cli-service build --report --no-clean --target lib --name lopo src/index.js",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
     "com": "node scripts/component.js"
