--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
   },
   "dependencies": {
     "@lopo/china-division-data": "^0.0.2",
+    "alloytouch": "^0.2.5",
     "ant-design-icons": "^1.3.3",
+    "css3transform": "^1.1.9",
     "date-fns": "^1.29.0",
     "id-validator": "^1.3.0",
     "is-chinese-phone-number": "^0.1.7",
     "lodash": "^4.17.10",
     "photoswipe": "^4.1.2",
+    "popmotion": "^8.3.8",
     "popper.js": "^1.14.4",
     "scroll-into-view-if-needed": "^2.2.16",
     "swiper": "^4.3.5",
@@ -47,7 +50,7 @@
     "vue-messenger": "^2.3.3"
   },
   "devDependencies": {
-    "@lopo/eslint-config-lopo": "^0.0.6",
+    "@lopo/eslint-config-lopo": "^0.0.7",
     "@vue/cli-plugin-babel": "^3.0.0",
     "@vue/cli-service": "^3.0.0",
     "babel-plugin-import": "^1.8.0",
