--- a/projects/theme/package.json
+++ b/projects/theme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lopo/theme",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Lopo 主题自定义工具。",
   "main": "src/cli.js",
   "bin": {
@@ -39,6 +39,7 @@
     "globby": "^8.0.1",
     "lodash": "^4.17.10",
     "postcss": "^7.0.2",
+    "postcss-image-inliner": "^2.0.0",
     "postcss-modules": "^1.3.2",
     "stylus": "^0.54.5"
   }
